# full-stack-fastapi-postgresql

{{cookiecutter.project_slug}}/backend/: backend.dockerfile  celeryworker.dockerfile
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/frontend/: package.json  pnpm-lock.yaml
