[project]
name = "fastapi-app"
version = "0.1.0"
description = "a fastapi backend app witn rye"
authors = [
    { name = "kailpony", email = "kailpony9527@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
